--- a/resume/index.html
+++ b/resume/index.html
@@ -2,302 +2,319 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./style/main.css">
-	<link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
-	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style/main.css">
+    <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-	<title>resume</title>
+    <title>resume</title>
 </head>
 
 <body>
-	<div id="navHeader" class="navHeader">
-		<div class="navBar clearfix">
-			<a class="logo" href="#" alt="logo">
-				<span class="rs">RS</span>
-				<span class="card">card</span>
-			</a>
-			<nav class="headNav">
-				<ul class="clearfix">
-					<li>
-						<a href="#about">关于</a>
-					</li>
-					<li>
-						<a href="#skills">技能</a>
-					</li>
-					<li>
-						<a href="#works">作品</a>
-						<ul class="submenu">
-							<li>作品1</li>
-							<li>作品2</li>
-							<li>作品3</li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">博客</a>
-					</li>
-					<li>
-						<a href="#">日历</a>
-					</li>
-					<li>
-						<a href="#">联系方式</a>
-					</li>
-					<li>
-						<a href="#">其他</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+    <div id="navHeader" class="navHeader">
+        <div class="navBar clearfix">
+            <a class="logo" href="#" alt="logo">
+                <span class="rs">RS</span>
+                <span class="card">card</span>
+            </a>
+            <nav class="headNav">
+                <ul class="clearfix">
+                    <li>
+                        <a href="#about">关于</a>
+                    </li>
+                    <li>
+                        <a href="#skills">技能</a>
+                    </li>
+                    <li>
+                        <a href="#works">作品</a>
+                        <ul class="submenu">
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#message">留言</a>
+                    </li>
+                    <li>
+                        <a href="#">日历</a>
+                    </li>
+                    <li>
+                        <a href="#">联系方式</a>
+                    </li>
+                    <li>
+                        <a href="#">其他</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
-	<div class="bgview">
-		<div class="mask"></div>
-	</div>
-	<main class="clearfix">
-		<div class="userCard" id="about" data-top>
-			<div class="pictureAndText clearfix">
-				<div class="picture">
-					<img src="./images/avatar.jpg" width="299" height="347" alt="头像">
-				</div>
-				<div class="text ">
-					<span class="welcome">Hello</span>
-					<h1>韩陈昊</h1>
-					<p> 软件工程师</p>
-					<hr>
-					<dl class="clearfix">
-						<dt>年龄</dt>
-						<dd>28</dd>
-						<dt>所在城市</dt>
-						<dd>成都</dd>
-						<dt>邮箱</dt>
-						<dd>hanchenhao@gmail.com</dd>
-						<dt>手机</dt>
-						<dd>13812345678</dd>
-					</dl>
-				</div>
-			</div>
-			<footer class="media">
-				<a href="#">
-					<i class="fa fa-drupal fa-2x"></i>
+    <div class="bgview">
+        <div class="mask"></div>
+    </div>
+    <main class="clearfix">
+        <div class="userCard" id="about" data-top>
+            <div class="pictureAndText clearfix">
+                <div class="picture">
+                    <img src="./images/avatar.jpg" width="299" height="347" alt="头像">
+                </div>
+                <div class="text ">
+                    <span class="welcome">Hello</span>
+                    <h1>韩陈昊</h1>
+                    <p> 软件工程师</p>
+                    <hr>
+                    <dl class="clearfix">
+                        <dt>年龄</dt>
+                        <dd>28</dd>
+                        <dt>所在城市</dt>
+                        <dd>成都</dd>
+                        <dt>邮箱</dt>
+                        <dd>hanchenhao@gmail.com</dd>
+                        <dt>手机</dt>
+                        <dd>13812345678</dd>
+                    </dl>
+                </div>
+            </div>
+            <footer class="media">
+                <a href="#">
+                    <i class="fa fa-drupal fa-2x"></i>
 
-				</a>
-				<a href="#">
-					<i class="fa fa-github fa-2x"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-github fa-2x"></i>
 
-				</a>
-				<a href="#">
-					<i class="fa fa-reddit fa-2x"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-reddit fa-2x"></i>
 
-				</a>
-			</footer>
-		</div>
+                </a>
+            </footer>
+        </div>
 
-		<p class="downloadResume-wrapper">
-			<a class="downloadResume" href="./" target="_blank" download="">下载 PDF 简历</a>
-		</p>
+        <p class="downloadResume-wrapper">
+            <a class="downloadResume" href="./" target="_blank" download="">下载 PDF 简历</a>
+        </p>
 
-		<p class="selfIntroduction">
-			韩陈昊， 软件工程师
-			<br> 技能：前端开发，移动端开发，Node.js开发
-		</p>
-	</main>
-	<section class="skills" id="skills" data-top>
-		<h2 class="title">技能</h2>
-		<ol class="clearfix">
-			<li>
-				<h3>
-					HTML 5 &amp; CSS 3
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 10%;"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					JavaScript
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 20%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					jQuery
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 30%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					Vue.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 40%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					React.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 50%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					Node.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 60%"></div>
-				</div>
-			</li>
-		</ol>
-	</section>
+        <p class="selfIntroduction">
+            韩陈昊， 软件工程师
+            <br> 技能：前端开发，移动端开发，Node.js开发
+        </p>
+    </main>
+    <section class="skills" id="skills" data-top>
+        <h2 class="title">技能</h2>
+        <ol class="clearfix">
+            <li>
+                <h3>
+                    HTML 5 &amp; CSS 3
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 10%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    JavaScript
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 20%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    jQuery
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 30%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Vue.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 40%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    React.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Node.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%"></div>
+                </div>
+            </li>
+        </ol>
+    </section>
 
-	<section class="portfolio" id="works" data-top>
-		<h2 class="title">作品集</h2>
-		<nav class="portfolioNav">
-			<ol class="clearfix">
-				<li id="portfolio1">所有</li>
-				<li id="portfolio2">框架</li>
-				<li id="portfolio3">原生JS&amp;CSS</li>
-			</ol>
-			<div id="portfolioBar" class="bar state-all">
-				<div class="bar-inner"></div>
-			</div>
-		</nav>
-		<script>
-			portfolio1.onclick = function () {
-				portfolioBar.className = 'bar state-all'
-			}
-			portfolio2.onclick = function () {
-				portfolioBar.className = 'bar state-frameworks'
-			}
-			portfolio3.onclick = function () {
-				portfolioBar.className = 'bar state-native'
-			}
-		</script>
+    <section class="portfolio" id="works" data-top>
+        <h2 class="title">作品集</h2>
+        <nav class="portfolioNav">
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&amp;CSS</li>
+            </ol>
+            <div id="portfolioBar" class="bar state-all">
+                <div class="bar-inner"></div>
+            </div>
+        </nav>
+        <script>
+            portfolio1.onclick = function() {
+                portfolioBar.className = 'bar state-all'
+            }
+            portfolio2.onclick = function() {
+                portfolioBar.className = 'bar state-frameworks'
+            }
+            portfolio3.onclick = function() {
+                portfolioBar.className = 'bar state-native'
+            }
+        </script>
 
 
-		<div class="works" style="height: 597px;">
-			<div class="big" style="top: 0; left: 0;">
-				<img src="./images/1 (1).jpg" alt="作品1">
-			</div>
-			<div class="small" style="top: 0; left: 645px;">
-				<img src="./images/2.jpg" alt="作品2">
-			</div>
-			<div class="small" style="top: 312px; left: 645px;">
-				<img src="./images/3.jpg" alt="作品3">
-			</div>
-		</div>
+        <div class="works" style="height: 597px;">
+            <div class="big" style="top: 0; left: 0;">
+                <img src="./images/1 (1).jpg" alt="作品1">
+            </div>
+            <div class="small" style="top: 0; left: 645px;">
+                <img src="./images/2.jpg" alt="作品2">
+            </div>
+            <div class="small" style="top: 312px; left: 645px;">
+                <img src="./images/3.jpg" alt="作品3">
+            </div>
+        </div>
 
-	</section>
+    </section>
+
+    <section class="message" id="message" data-top>
+        <h2 class="title">留言</h2>
+        <ul id="messageList"></ul>
+        <form id="messageForm">
+            <!-- <div> -->
+            <label for="messageName">姓名</label>
+            <input type="text" name="name" id="messageName">
+            <label for="messageContent">内容</label>
+            <input type="text" name="content" id="messageContent">
+            <input type="submit" value="提交">
+            <!-- </div> -->
+
+        </form>
+    </section>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
 
 <script>
-	let liTags = document.querySelectorAll(".headNav>ul>li")
-	let aTags = document.querySelectorAll(".headNav>ul>li>a")
-	let nav = document.getElementById("navHeader")
+    let liTags = document.querySelectorAll(".headNav>ul>li")
+    let aTags = document.querySelectorAll(".headNav>ul>li>a")
+    let nav = document.getElementById("navHeader")
 
-	highlight()
-	// Setup the animation loop.
-	function animate(time) {
-		requestAnimationFrame(animate);
-		TWEEN.update(time);
-	}
-	requestAnimationFrame(animate);
+    highlight()
+        // Setup the animation loop.
+    function animate(time) {
+        requestAnimationFrame(animate);
+        TWEEN.update(time);
+    }
+    requestAnimationFrame(animate);
 
-	liTags.forEach((li) => {
-		li.onmouseenter = function (e) {
-			this.classList.add("highlight")
-		}
-		li.onmouseleave = function (e) {
-			this.classList.remove('highlight')
-		}
+    liTags.forEach((li) => {
+        li.onmouseenter = function(e) {
+            this.classList.add("highlight")
+        }
+        li.onmouseleave = function(e) {
+            this.classList.remove('highlight')
+        }
 
-	})
+    })
 
-	aTags.forEach((a) => {
+    aTags.forEach((a) => {
 
-		a.onmouseenter = function () {
-			if (getSubmenu(this)) {
-				getSubmenu(this).classList.add("active")
+        a.onmouseenter = function() {
+            if (getSubmenu(this)) {
+                getSubmenu(this).classList.add("active")
 
-			}
-		}
-		a.onmouseleave = function () {
-			if (getSubmenu(this)) {
-				getSubmenu(this).classList.remove("active")
+            }
+        }
+        a.onmouseleave = function() {
+            if (getSubmenu(this)) {
+                getSubmenu(this).classList.remove("active")
 
-			}
-		}
-		a.onclick = function (e) {
-			e.preventDefault()
-			let id = this.getAttribute("href")
-			if (id == "#") {
-				return
-			}
-			let element = document.querySelector(this.getAttribute("href"))
-			let top = element.offsetTop
-			let currentTop = window.scrollY
+            }
+        }
+        a.onclick = function(e) {
+            e.preventDefault()
+            let id = this.getAttribute("href")
+            if (id == "#") {
+                return
+            }
+            let element = document.querySelector(this.getAttribute("href"))
+            let top = element.offsetTop
+            let currentTop = window.scrollY
 
-			let distance = top - currentTop - nav.offsetHeight
-			let time = Math.abs(distance / 3)
-			var coords = {
-				x: 0,
-				y: currentTop
-			}; // Start at (0, 0)
-			var tween = new TWEEN.Tween(coords) // Create a new tween that modifies 'coords'.
-				.to({
-					y: top - nav.offsetHeight - 20
+            let distance = top - currentTop - nav.offsetHeight
+            let time = Math.abs(distance / 3)
+            var coords = {
+                x: 0,
+                y: currentTop
+            }; // Start at (0, 0)
+            var tween = new TWEEN.Tween(coords) // Create a new tween that modifies 'coords'.
+                .to({
+                    y: top - nav.offsetHeight - 20
 
-				}, 300)
-				.easing(TWEEN.Easing.Cubic.InOut) // Use an easing function to make the animation smooth.
-				.onUpdate(function () { // Called after tween.js updates 'coords'.
-					window.scrollTo(0, coords.y)
-				})
-				.start(); // Start the tween immediately.
-		}
-	})
+                }, 300)
+                .easing(TWEEN.Easing.Cubic.InOut) // Use an easing function to make the animation smooth.
+                .onUpdate(function() { // Called after tween.js updates 'coords'.
+                    window.scrollTo(0, coords.y)
+                })
+                .start(); // Start the tween immediately.
+        }
+    })
 
-	window.onscroll = function () {
-		var t = document.documentElement.scrollTop || document.body.scrollTop; //获取距离页面顶部的距离
-		var nav = document.getElementById("navHeader"); //获取div元素
-		nav.className = t > 0 ? "navWhite navHeader" : "navHeader";
-		highlight()
-	}
+    window.onscroll = function() {
+        var t = document.documentElement.scrollTop || document.body.scrollTop; //获取距离页面顶部的距离
+        var nav = document.getElementById("navHeader"); //获取div元素
+        nav.className = t > 0 ? "navWhite navHeader" : "navHeader";
+        highlight()
+    }
 
-	function getSubmenu(a) {
-		let sibling = a.nextSibling
-		while (sibling != null) {
-			if (sibling.nodeType == 1) {
-				return sibling
-			}
-			sibling = sibling.nextSibling
-		}
-	}
+    function getSubmenu(a) {
+        let sibling = a.nextSibling
+        while (sibling != null) {
+            if (sibling.nodeType == 1) {
+                return sibling
+            }
+            sibling = sibling.nextSibling
+        }
+    }
 
-	function highlight() {
-		let tags = document.querySelectorAll("[data-top]")
+    function highlight() {
+        let tags = document.querySelectorAll("[data-top]")
 
-		let minIndex = 0
-		for (let i = 1; i < tags.length; i++) {
-			if (Math.abs(tags[i].offsetTop - window.scrollY) < Math.abs(tags[minIndex].offsetTop - window.scrollY)) {
-				minIndex = i
-			}
-		}
-		let a = document.querySelector('a[href="#' + tags[minIndex].id + '"]')
-		liTags.forEach((li) => {
-			li.classList.remove("movehighlight")
-		})
-		a.parentElement.classList.add("movehighlight")
-	}
+        let minIndex = 0
+        for (let i = 1; i < tags.length; i++) {
+            if (Math.abs(tags[i].offsetTop - window.scrollY) < Math.abs(tags[minIndex].offsetTop - window.scrollY)) {
+                minIndex = i
+            }
+        }
+        let a = document.querySelector('a[href="#' + tags[minIndex].id + '"]')
+        liTags.forEach((li) => {
+            li.classList.remove("movehighlight")
+        })
+        a.parentElement.classList.add("movehighlight")
+    }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/leancloud-storage@3.7.3/dist/av-min.js"></script>
+<script src="./js/message.js"></script>
 
 
 </html>
